# gobgp

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl
api/: BUILD.bazel
cmd/gobgp/: BUILD.bazel
cmd/gobgpd/: BUILD.bazel
internal/pkg/config/: BUILD.bazel
internal/pkg/table/: BUILD.bazel
internal/pkg/version/: BUILD.bazel
internal/pkg/zebra/: BUILD.bazel
package/: BUILD.bazel  gobgpd.service  preinst.sh
pkg/apiutil/: BUILD.bazel
pkg/config/: BUILD.bazel
pkg/log/: BUILD.bazel
pkg/packet/bgp/: BUILD.bazel
pkg/packet/bmp/: BUILD.bazel
pkg/packet/mrt/: BUILD.bazel
pkg/packet/rtr/: BUILD.bazel
pkg/server/: BUILD.bazel
tools/config/: BUILD.bazel
