load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gobgpd_lib",
    srcs = [
        "main.go",
        "util.go",
        "util_windows.go",
    ],
    importpath = "github.com/osrg/gobgp/v3/cmd/gobgpd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/version",
        "//pkg/config",
        "//pkg/server",
        "@com_github_coreos_go_systemd_v22//daemon:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@com_github_kr_pretty//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//pkg/log",
            "@com_github_sirupsen_logrus//hooks/syslog:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "gobgpd",
    embed = [":gobgpd_lib"],
    visibility = ["//visibility:public"],
)
