load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/osrg/gobgp/v3/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//internal/pkg/config",
        "//internal/pkg/table",
        "//pkg/apiutil",
        "//pkg/log",
        "//pkg/packet/bgp",
        "//pkg/server",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = ["//pkg/server"],
)
