load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "bmp.go",
        "fsm.go",
        "grpc_server.go",
        "mrt.go",
        "peer.go",
        "rpki.go",
        "server.go",
        "sockopt.go",
        "sockopt_bsd.go",
        "sockopt_darwin.go",
        "sockopt_linux.go",
        "sockopt_openbsd.go",
        "sockopt_stub.go",
        "util.go",
        "zclient.go",
    ],
    importpath = "github.com/osrg/gobgp/v3/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//internal/pkg/config",
        "//internal/pkg/table",
        "//internal/pkg/version",
        "//internal/pkg/zebra",
        "//pkg/apiutil",
        "//pkg/log",
        "//pkg/packet/bgp",
        "//pkg/packet/bmp",
        "//pkg/packet/mrt",
        "//pkg/packet/rtr",
        "@com_github_dgryski_go_farm//:go_default_library",
        "@com_github_eapache_channels//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":server",
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = [
        "fsm_test.go",
        "grpc_server_test.go",
        "server_test.go",
        "sockopt_linux_test.go",
        "zclient_test.go",
    ],
    embed = [":server"],
    deps = [
        "//api",
        "//internal/pkg/config",
        "//internal/pkg/table",
        "//internal/pkg/zebra",
        "//pkg/apiutil",
        "//pkg/log",
        "//pkg/packet/bgp",
        "@com_github_eapache_channels//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
    ],
)
