load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "bgp_configs.go",
        "default.go",
        "default_linux.go",
        "default_nonlinux.go",
        "serve.go",
        "util.go",
    ],
    importpath = "github.com/osrg/gobgp/v3/internal/pkg/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api",
        "//internal/pkg/version",
        "//internal/pkg/zebra",
        "//pkg/apiutil",
        "//pkg/log",
        "//pkg/packet/bgp",
        "//pkg/packet/bmp",
        "//pkg/packet/rtr",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_vishvananda_netlink//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_vishvananda_netlink//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "config_test",
    srcs = [
        "bgp_configs_test.go",
        "util_test.go",
    ],
    embed = [":config"],
    deps = [
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
